[package]
name = "arue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.3.0", features = ["json"] }
serde_json = "1.0.0"
json = "0.12.4"
clearscreen = "1.0.9"
terminal = "0.2.1"